--- a/2018/themes/yellow-swan/css/main.css
+++ b/2018/themes/yellow-swan/css/main.css
@@ -913,3 +913,12 @@ nav {
     display: none;
   }
 }
+
+.hi-icon a {
+  display:block;
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0px;
+  z-index:100
+}
