--- a/2018/themes/yellow-swan/css/main.css
+++ b/2018/themes/yellow-swan/css/main.css
@@ -922,3 +922,42 @@ nav {
   top:0px;
   z-index:100
 }
+
+#topiccontainerlist ul
+{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+#topiccontainerlist a
+{
+  display: block;
+  color: #FFF;
+  background-color: #000000;
+  font-size: large;
+  width: 100%;
+  padding: 14px 14px 14px 10px;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+  font-weight: bold;
+}
+
+#topiccontainerlist a:hover
+{
+  background-color: #369;
+  color: #FFF;
+}
+
+#topiccontainerlist li li a
+{
+  display: block;
+  color: #000000;
+  font-size: large;
+  background-color: #FFFFFF;
+  width: 100%;
+  padding: 10px 10px 10px 17px;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+  font-weight: normal;
+}
