--- a/2019/themes/yellow-swan/css/main.css
+++ b/2019/themes/yellow-swan/css/main.css
@@ -728,7 +728,7 @@ nav {
    HEADER
    ========================================================================== */
 .header {
-  background-image: url('../img/ISWE2018.workshop.KG2T.v2.jpg');
+  background-image: url('../img/bis2019cov3.jpg');
   background-color: #2b2b2b;
   background-repeat: no-repeat;
   background-position: center bottom;
